--- a/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-MacOS-10.9-clang-results.html
+++ b/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-MacOS-10.9-clang-results.html
@@ -3,7 +3,7 @@ title: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-MacOS-10.9
 permalink: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-MacOS-10.9-clang.html
 tags: data
 layout: ci_results
-date: 2014-04-16 19:12:00
+date: 2014-04-16 19:12:04
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -27,7 +27,7 @@ pull_request_issue_id: ""
 pull_request_base_repository: 
 pull_request_base_ref: 
 device_id: x86_64-MacOS-10.9-clang
-pending: true
+pending: false
 ---
 
 {"build_results":[],"test_results":[],"failure":null,"package_results":[]}
