--- a/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
+++ b/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
@@ -3,8 +3,8 @@ title: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubun
 permalink: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html
 tags: data
 layout: ci_results
-date: 2014-04-16 19:12:18
-unhandled_failure: false
+date: 2014-04-16 19:12:22
+unhandled_failure: true
 build_error_count: 0
 build_warning_count: 0
 package_error_count: 0
@@ -27,8 +27,8 @@ pull_request_issue_id: ""
 pull_request_base_repository: 
 pull_request_base_ref: 
 device_id: x86_64-Linux-Ubuntu-14.04-gcc-4.8
-pending: true
+pending: false
 ---
 
-{"build_results":[],"test_results":[],"failure":null,"package_results":[]}
+{"build_results":[],"test_results":[],"failure":"undefined method `each' for nil:NilClass","package_results":[]}
 
