--- a/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-clang-3.5-results.html
+++ b/_posts/2014-04-16-EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-clang-3.5-results.html
@@ -3,7 +3,7 @@ title: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubun
 permalink: EnergyPlusTeam-7b20d661f61433be04ae56438a185a97da31fd19-x86_64-Linux-Ubuntu-14.04-clang-3.5.html
 tags: data
 layout: ci_results
-date: 2014-04-16 19:12:24
+date: 2014-04-16 19:12:27
 unhandled_failure: true
 build_error_count: 0
 build_warning_count: 0
@@ -27,7 +27,7 @@ pull_request_issue_id: ""
 pull_request_base_repository: 
 pull_request_base_ref: 
 device_id: x86_64-Linux-Ubuntu-14.04-clang-3.5
-pending: true
+pending: false
 ---
 
 {"build_results":[],"test_results":[],"failure":"undefined method `each' for nil:NilClass","package_results":[]}
