--- a/_posts/2014-04-17-EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
+++ b/_posts/2014-04-17-EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-x86_64-Linux-Ubuntu-14.04-gcc-4.8-results.html
@@ -3,7 +3,7 @@ title: EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-x86_64-Linux-Ubun
 permalink: EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-x86_64-Linux-Ubuntu-14.04-gcc-4.8.html
 tags: data
 layout: ci_results
-date: 2014-04-17 19:09:39
+date: 2014-04-17 19:30:55
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -22,12 +22,12 @@ release_packaged: false
 tag_name: 
 commit_sha: ede76fcd8af26e5a41fde100c0f003115becb062
 branch_name: 62469692-implement-ci
-test_run: false
+test_run: true
 pull_request_issue_id: ""
 pull_request_base_repository: 
 pull_request_base_ref: 
 device_id: x86_64-Linux-Ubuntu-14.04-gcc-4.8
-pending: true
+pending: false
 ---
 
 {"build_results":[],"test_results":[],"failure":null,"package_results":[]}
