--- a/_posts/2014-04-17-EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-Win64-Windows-8.1-VisualStudio-12-results.html
+++ b/_posts/2014-04-17-EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-Win64-Windows-8.1-VisualStudio-12-results.html
@@ -3,10 +3,10 @@ title: EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-Win64-Windows-8.1
 permalink: EnergyPlusTeam-ede76fcd8af26e5a41fde100c0f003115becb062-Win64-Windows-8.1-VisualStudio-12.html
 tags: data
 layout: ci_results
-date: 2014-04-17 20:01:55
+date: 2014-04-17 20:51:27
 unhandled_failure: false
 build_error_count: 0
-build_warning_count: 0
+build_warning_count: 6
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -27,8 +27,8 @@ pull_request_issue_id: ""
 pull_request_base_repository: 
 pull_request_base_ref: 
 device_id: Win64-Windows-8.1-VisualStudio-12
-pending: true
+pending: false
 ---
 
-{"build_results":[],"test_results":[],"failure":null,"package_results":[]}
+{"build_results":[{"filename":"12.0\\vc\\include\\xlocale","linenumber":"337","colnumber":0,"messagetype":"warning","message":"C++ exception handler used, but unwind semantics are not enabled. Specify /EHsc"},{"filename":"12.0\\vc\\include\\xtree","linenumber":"793","colnumber":0,"messagetype":"warning","message":"C++ exception handler used, but unwind semantics are not enabled. Specify /EHsc"},{"filename":"12.0\\vc\\include\\xutility","linenumber":"2132","colnumber":0,"messagetype":"warning","message":"'std::_Copy_impl': Function call with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators'"},{"filename":"12.0\\vc\\include\\xutility","linenumber":"2715","colnumber":0,"messagetype":"warning","message":"'std::_Fill_n': Function call with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators'"},{"filename":"12.0\\vc\\include\\xutility","linenumber":"2798","colnumber":0,"messagetype":"warning","message":"'std::_Equal1': Function call with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators'"},{"filename":"12.0\\vc\\include\\xutility","linenumber":"2869","colnumber":0,"messagetype":"warning","message":"'std::_Equal2': Function call with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators'"}],"test_results":[],"failure":null,"package_results":[]}
 
